# pni-libraries.benchmarks

./: .gitignore  .travis.yml  CMakeLists.txt  SConstruct  conanfile.txt
configure/: CMakeLists.txt
doc/: common_options.txt  log_file_format.txt
src/common/: CMakeLists.txt  array_benchmark_data.hpp  benchmark_log.cpp  benchmark_log.hpp  config.hpp.cmake  configuration.cpp  configuration.hpp  data_generator.hpp  logfile.cpp  logfile.hpp  types.hpp  uniform_distribution.hpp  utils.cpp  utils.hpp  view_benchmark_data.hpp
src/pnicore/: .gitignore  CMakeLists.txt  SConscript  arithmetic_benchmark.f90  arithmeticbm.cpp  benchmark_runners.cpp  benchmark_runners.hpp  benchmark_type_selectors.hpp  binary_arithmetic_benchmark.hpp  binary_arithmetic_benchmark_pointer.hpp  binary_arithmetic_benchmark_ptr.hpp  farithmeticbm.f90  fortran_arithmeticbm.hpp  index_map_bm.cpp  inplace_arithmetic_benchmark.hpp  inplace_arithmetic_benchmark_pointer.hpp  inplace_arithmetic_benchmark_ptr.hpp  iteratorbm.cpp  linear_io_iterator.hpp  linear_io_pointer.hpp  multiindex_io_array.hpp  multiindexbm.cpp
src/pniio/: .gitignore  CMakeLists.txt  SConscript  benchmark_factory.cpp  benchmark_factory.hpp  file_io_benchmark.cpp  file_io_benchmark.hpp  hdf5_io_benchmark.hpp  pniio_io_benchmark.hpp  pniiobm.cpp  pniiobm_utils.cpp  pniiobm_utils.hpp
src/scripts/: .gitignore  arithmetic_benchmark_run.sh  arithmeticbm.py  benchmark.py  bin_arithmetic_eval.py  index_map_comparison.sh  indexmap_benchmark_run.sh  iterator_benchmark_run.sh  iterator_eval.py  iterbm.py  multiindex_benchmark_run.sh  multiindex_cachegrind.sh  multiindex_eval.py  plot_result.py  pniiobm.py  pniiobm.sh  pniiobm_cachegrind.sh  pniiobm_callgrind.sh
test/: CMakeLists.txt  array_benchmark_data_test.cpp  array_benchmark_data_test.hpp  benchmark_test.cpp  common.hpp  dynamic_array_benchmark_data_test.cpp  dynamic_view_benchmark_data_test.cpp  fixed_array_benchmark_data_test.cpp  fixed_view_benchmark_data_test.cpp  static_array_benchmark_data_test.cpp  static_view_benchmark_data_test.cpp  view_benchmark_data_test.cpp  view_benchmark_data_test.hpp
